layers filename capitalized

--- a/P000031.opf/layers/v001/BookTitle.yml
+++ b/P000031.opf/layers/v001/BookTitle.yml
@@ -1,5 +1,5 @@
 id: 28254ef99e384077a02b9ecd0d4fd4d4
-annotation_type: book_title
+annotation_type: BookTitle
 revision: '00001'
 annotations:
 - span:
