layers filename capitalized

--- a/P000031.opf/layers/v001/Sabche.yml
+++ b/P000031.opf/layers/v001/Sabche.yml
@@ -1,5 +1,5 @@
 id: fd826ff10dad4c3db49ec1e5438faf54
-annotation_type: Tsawa
+annotation_type: Sabche
 revision: '00001'
 annotations:
   0da20cd15d05432fa42c5083af59dafd:
